--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4417,6 +4417,17 @@
                 android:value="com.evolution.settings.fragments.SmartPixels" />
         </activity>
 
+        <!-- Jitter Test Activity -->
+        <activity
+            android:name="com.evolution.settings.fragments.uibench.JitterTestActivity"
+            android:theme="@style/Theme.SubSettingsBase"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
